<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:allowDividerBelow="true"
        app:title="@string/app_header">
        <SwitchPreferenceCompat
            app:summary="@string/voic_noti_summ_name"
            app:title="@string/voic_noti_menu" />
        <SwitchPreference
            app:summary="@string/dark_mode_summ"
            app:title="@string/dark_mode_title"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/about_header"
        app:key="about_parent">

        <Preference
            app:enableCopying="false"
            app:key="about"
            app:title="@string/info_title" />

        <Preference
            app:enableCopying="false"
            app:key="contact"
            app:title="@string/contact_us" />

    </PreferenceCategory>

</PreferenceScreen>